2008-06-27  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_derived_probe_group::emit_module_decls): Fix
	bug in handling process(PID) probes.

2008-06-24  K.Prasad  <prasad@linux.vnet.ibm.com>

	* tapset/vfs.stp: Deprecate probe points on old functions, namely
	generic_file_readv(), generic_file_writev(),
	generic_file_read() and generic_file_write().
	* tapset/vfs.stp: Enhance the tapset by
	providing more pure C functions, probes for newer VFS related functions
	* testsuite/buildok/vfs_testcase.stp: Created a testsuite for the
	new enhanced VFS Tapset which does a compile test i.e. with flags -up4

2008-06-25  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (iterate_over_srcfile_lines): Only probe a line once.

2008-06-24  Tim Moore  <timoore@redhat.com>

	* auto_free.h: New file.
	* tapsets.cxx (iterate_over_srcfile_lines, read_symbols): Use
	auto_free instead of explicit calls to ::free().
	(Compare): Class for comparing func_info objects and their
	addresses.
	(get_index_for_address): Remove.
	(symbol_table::sort): new function.
	(query_module_symtab): Iterate over list_by_addr using iterator
	instead of index.
	(~symbol_table): Don't bother clearing list_by_addr and
	map_by_name.
	(add_symbol): Don't keep list_by_addr in order.
	(read_symbols, get_from_elf): Sort symbols after all are read.
	(get_func_containing_address): Use std::upper_bound.
	(purge_syscall_stubs): Don't iterate over whole list_by_addr
	vector; use std::equal_range to look for possible stub addresses.

2008-06-23  Frank Ch. Eigler  <fche@elastic.org>

	* session.h (module_cache): Add field here.
	* tapsets.cxx (dwflpp): Remove static field from here.
	(pathname_caching_callback): Use hacky micro-static to get to it.
	(*): Update other users of module_cache.
	* elaborate.cxx (systemtap_session ctor): Corresponding changes.

2008-06-23  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_derived_probe_group::emit_probe_decl):
	Handles UDPF_NONE value.